<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">홈</string>
    <string name="title_mypage">마이페이지</string>
    <string name="title_calender">일기보기</string>
    <string name="title_dairy">일기쓰기</string>
    <string name="title_graph">그래프</string>
    <string name="title_setting">설정</string>
    <string name="title_music">노래듣기</string>
    <string name="title_room">나의방</string>
    <string name="title_meditation">명상하기</string>
    <string name="title_askhelp">도움요청</string>
    <string name="title_logout">로그아웃</string>
    <string name="action_favorite">search</string>
    <string name="nav_header_desc">header_desc</string>
    <string name="nav_header_title">header_title</string>
    <string name="nav_header_subtitle">header_subtitle</string>
    <string name="move">move</string>

</resources>